--- a/style.css
+++ b/style.css
@@ -4,25 +4,48 @@
         color:#777;
         background-color:#777;
         width:960px;
-        height: 250px;
         font-size:18px;
     }
     header {
         background-color:#ebebeb;
+        height: 150px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     nav {
         background-color:#ebebeb;
-        height: 250px;
+        height: 150px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     section {
         background-color:#ebebeb;
-        width: 495px
+        width: 495px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 100px;
+        margin-right: 100px;
+        height: 250px;
     }
     aside {
         background-color:#ebebeb;
+        width: 500px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 100px;
+        margin-right: 100px;
+        height: 250px;
     }
     footer {
         background-color:#ebebeb;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 100px;
+        margin-right: 100px;
     }
     article {
         color:#ebebeb;
@@ -36,3 +59,18 @@
         color:#777;
         background-color:#ebebeb;
     }
+
+    .section {
+        float: left;
+    }
+    .aside {
+        float: right;
+    }
+    .footer {
+        height: 100px; 
+        width:100%;
+        position: absolute;
+        left: 0;
+        bottom: 0; 
+    }
+</style>
