--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@
     }
     section {
         background-color:#ebebeb;
-        width: 495px;
         margin-top: 15px;
         margin-bottom: 15px;
         margin-left: 100px;
@@ -33,7 +32,6 @@
     }
     aside {
         background-color:#ebebeb;
-        width: 500px;
         margin-top: 15px;
         margin-bottom: 15px;
         margin-left: 100px;
@@ -60,12 +58,16 @@
         background-color:#ebebeb;
     }
 
-    .section {
+    * {
+        box-sizing: border-box;
+      }
+
+    .box {
         float: left;
-    }
-    .aside {
-        float: right;
-    }
+        width: 50%;
+        padding: 50px;
+      }
+
     .footer {
         height: 100px; 
         width:100%;
@@ -73,4 +75,6 @@
         left: 0;
         bottom: 0; 
     }
+   
+
 </style>
