--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
         border:5px solid blue;
     }
     .main-container {
-        min-height: 100%;
+        min-height: 100vh;
         overflow: hidden;
         display: block;
         position: relative;
-        padding-bottom: 100px; /* height of your footer */
+        padding-bottom: 100px; /* height of  footer */
         border: 1px solid red;
        }
 
@@ -79,7 +79,6 @@
         background-color:#ebebeb;
         padding:20px;
     }
-
     
     .box {
         float: left;
