--- a/old codes/style.css
+++ b/old codes/style.css
@@ -1,18 +1,23 @@
 
-   * {
-    box-sizing: border-box;
-    text-align: center;
-  }
-   body {
+    body {
         font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
         color:#777;
         background-color:#777;
         width:960px;
         font-size:18px;
         text-align: center;
-        
+        box-sizing: border-box;
+        border:5px solid blue;
     }
-    
+    .main-container {
+        min-height: 100vh;
+        overflow: hidden;
+        display: block;
+        position: relative;
+        padding-bottom: 100px; /* height of  footer */
+        border: 1px solid red;
+       }
+
 
     header {
         background-color:#ebebeb;
@@ -21,7 +26,7 @@
         margin-bottom: 15px;
         margin-left: 100px;
         margin-right: 100px;
-        padding:20px;
+        text-align: center;
     }
     nav {
         background-color:#ebebeb;
@@ -30,40 +35,23 @@
         margin-bottom: 15px;
         margin-left: 100px;
         margin-right: 100px;
-        padding:20px;
     }
-#left-box {
-    float:left;
-    height:300px;
-    width:495px;
-    margin-left: 100px;
-}
-
-#right-box {
-    float:right;
-    height:300px;
-    width:240px;
-    margin-right: 100px;
-}
-
-#big-box {
-    height: 300px;
-    width:960px;
-}
     section {
         background-color:#ebebeb;
-        float:left;
-        height:300px;
-        width:495px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 100px;
         margin-right: 10px;
+        height: 350px;
         padding: 20px;
     }
     aside {
         background-color:#ebebeb;
-        float:right;
-        height:300px;
-        width:240px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         margin-left: 10px;
+        margin-right: 100px;
+        height: 350px;
         padding:20px;
     }
     footer {
@@ -72,23 +60,18 @@
         margin-bottom: 15px;
         margin-left: 100px;
         margin-right: 100px;
-        position: bottom;
-        height: 50px;
-        padding:20px;
+        border: 5px solid yellow;
      
     }
     article {
         color:#ebebeb;
         background-color:#777;
         padding:20px;
-        margin-top: 20px;
     }
     h1 {
         color:#777;
         background-color:#ebebeb;
         padding:20px;
-        margin-bottom: 10px;
-        margin-top: 10px;
     }
     
     p {
@@ -96,3 +79,18 @@
         background-color:#ebebeb;
         padding:20px;
     }
+    
+    .box {
+        float: left;
+        width: 50%;
+        padding: 0px;
+      }
+
+    .footer {
+        height: 100px; 
+        width:100%;
+        position: absolute;
+        left: 0;
+        bottom: 0; 
+    }
+
